fix scrollbar on load animation

--- a/src/components/Content/TopSlideSection/TopSlideSection.css
+++ b/src/components/Content/TopSlideSection/TopSlideSection.css
@@ -3,6 +3,7 @@
     color: #ffffff;
     background: #302F41;
     position: relative;
+    overflow: hidden;
 }
 
 .top-slide-section__contacts-widget {
